tests/paczka2/big_fuzzy/99269879.err
Error in line 4: hOBAyOd A937 89,4
Error in line 2: uL2LAqwZHus S61 86,8
Error in line 16: LFMqzWnTMzZ S26 73,64
Error in line 18: LFMqzWnTMzZ S885 89,8
Error in line 15: sFgKuDT0 S26 6,1
Error in line 22: hOBAyOd A937 59,5
Error in line 10: uL2LAqwZHus A937 84,5
Error in line 34: O8bOxBKfuQ S885 79,5
Error in line 32: sFgKuDT0 S61 134,3
Error in line 46: O8bOxBKfuQ A937 76,2
Error in line 71: S61 S61 95,8
Error in line 86: O8bOxBKfuQ A937 3,5
Error in line 94: sFgKuDT0 A937 61,9
Error in line 93: O8bOxBKfuQ S885 6,4
Error in line 87: jOo S61 4,8
Error in line 111: sFgKuDT0 S885 20,1
Error in line 113: S61 S885 81,1
Error in line 124: sFgKuDT0 S61 278,0
Error in line 126: sFgKuDT0 S26 62,2
Error in line 129: sFgKuDT0 A937 23,4
Error in line 125: jOo S61 73,9
Error in line 134: jOo S885 67,8
Error in line 139: uL2LAqwZHus S26 18,4
Error in line 108: hOBAyOd S61 99,3
Error in line 152: sFgKuDT0 S885 74,8
Error in line 149: S61 S61 66,4
Error in line 169: hOBAyOd S26 53,3
Error in line 172: uL2LAqwZHus S885 342,0
Error in line 184: S61 A937 66,8
Error in line 189: sFgKuDT0 S26 9,6
Error in line 195: sFgKuDT0 S61 70,5
Error in line 192: O8bOxBKfuQ S885 196,2
Error in line 203: hOBAyOd S26 18,0
Error in line 191: uL2LAqwZHus S26 11,7
Error in line 216: LFMqzWnTMzZ S26 35,2
Error in line 206: hOBAyOd A937 16,8
Error in line 220: hOBAyOd S61 2,6
Error in line 211: S61 S26 86,2
Error in line 221: hOBAyOd A937 19,7
Error in line 224: jOo S61 236,7
Error in line 243: sFgKuDT0 A937 96,5
Error in line 244: sFgKuDT0 S61 669,0
Error in line 245: sFgKuDT0 S885 41,0
